deploy/miportfolio/templates/deploy-portfolio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: miportfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: sergiogg06/portafolioreact:latest # Asegúrate de haber subido la imagen a Docker Hub
          ports:
            - containerPort: 80
