deploy/miportfolio/templates/ingress-portfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  # SE ELIMINA LA LÍNEA: namespace: miportfolio
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - sergiogallardogrima.com
    - www.sergiogallardogrima.com
    secretName: portfolio-tls-secret 
  rules:
    - host: sergiogallardogrima.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
...
